crates/math-core/tests/snapshots/error_test__mathord_mutli_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x \\mathord{++} y"
---
Error: Expected at most one token as argument.
   ╭─[ <input>:1:11 ]
   │
 1 │ x \mathord{++} y
   │           ──┬─  
   │             ╰─── expected at most one token here
───╯
